--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
@@ -1,454 +1,456 @@
+:root {
+  --space-on-elements: 2rem;
+}
+html {
+  font-size: 16px;
+}
 body {
-    display: grid;
-    width: 100vw;
-    min-height: 100vh;
-    justify-content: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: 70px 1fr 20%;
-    grid-template-areas: 
-    'header header header header header header header'
-    'nav main main main main main sidebar'
-    'footer footer footer footer footer footer footer';
+  display: grid;
+  min-height: 100vh;
+  justify-content: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-areas:
+    "header header header header header header header"
+    "nav main main main main main sidebar"
+    "footer footer footer footer footer footer footer";
 }
 
-p {
-    font-size: 0.8rem;
+p,
+a,
+li,
+button,
+input {
+  font-size: 0.8rem;
 }
 
 /* ----- HEADER ----- */
 header {
-    grid-area: header;
-    display: flex;
-    grid-column: 1 / 8;
-    grid-row: 1;
-    padding-left: 1.8rem;
-    padding-top: 1.2rem;
-    padding-bottom: 1.2rem;
-    background: rgb(58, 77, 111);
+  grid-area: header;
+  display: flex;
+  gap: 0.5em;
+  align-items: center;
+  padding-left: 1.8rem;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  background: rgb(58, 77, 111);
+}
+.img-logo-header {
+  object-fit: contain;
+  height: 100%;
+  width: auto;
+  max-height: 30px;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5em;
+  list-style: none;
+  padding: 0;
+  padding: 0 2em 2em 2em;
+  width: 100%;
+}
+
+.link {
+  display: block;
+  padding: 0.5em 1em;
+}
+
+.link:hover {
+  background-color: rgb(81, 212, 170);
+}
+
+.active {
+  background-color: rgb(81, 212, 170);
+  color: white;
 }
 
 .marque {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    color: white;
-    padding-left: 0.3rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
 }
 /* ----- HEADER ----- */
 
 /* ----- NAV ----- */
 nav {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items:flex-start;
-    grid-area: nav;
-    width: 100%;
-    background: rgb(242, 230, 230);
-    padding-top: 4rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  grid-area: nav;
+  background: rgb(242, 230, 230);
+  padding-top: 4rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 nav a {
-    margin-left: 1.8rem;
-    text-decoration: none;
-    color: rgb(61, 58, 58);
-    font-size: 0.8rem;
-    margin-bottom: 1.8rem;
-    border-radius: 4px;
+  text-decoration: none;
+  color: rgb(61, 58, 58);
+  border-radius: 4px;
 }
 
 nav a:hover {
-    background-color: rgb(81, 212, 170);
-    color: white;
+  background-color: rgb(81, 212, 170);
+  color: white;
 }
 /* ----- NAV ----- */
 
 /* ----- MAIN ----- */
 main {
-    grid-area: main;
-    grid-column: 2 / 7;
-    grid-row: 2;
-    text-align: left;
-    padding-top: 3rem;
-    padding-left: 10rem;
-    padding-right: 10rem;
+  grid-area: main;
+  text-align: left;
+  padding-top: 3rem;
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
 main h2 {
-    color: rgb(55, 55, 55);
+  color: rgb(55, 55, 55);
 }
 
 main ul {
-    padding-top: 1rem;
+  padding-top: 1rem;
 }
 
 main li {
-    font-size: 0.8rem;
-    color: rgb(71, 71, 71);
+  color: rgb(71, 71, 71);
 }
 
 main div {
-    padding-bottom: 2rem;
-    padding-top: 0.5rem;
+  padding-bottom: var(--space-on-elements);
+  padding-top: 0.5rem;
 }
 
 main h3 {
-    padding-bottom: 1rem;
-    color: rgb(49, 49, 49);
-    font-size: medium;
+  padding-bottom: 1rem;
+  color: rgb(49, 49, 49);
+  font-size: medium;
 }
 
 main p {
-    line-height: 1.2rem;
-    color: rgb(71, 71, 71);
+  line-height: 1.2rem;
+  color: rgb(71, 71, 71);
 }
 
 #avantages {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10rem;
-}
-
-.box {
-    width: 35%;
-    
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5rem;
 }
 
 #btn {
-    display: flex;
-    justify-content: center;
-} 
+  display: flex;
+  justify-content: center;
+}
 
 main button {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    padding-left: 1em;
-    padding-right: 1em;
-    font-size: 0.8rem;
-    background-color: rgb(81, 212, 170);
-    border-color: rgb(81, 212, 170);
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 1em;
+  padding-right: 1em;
+  background-color: rgb(81, 212, 170);
+  border-color: rgb(81, 212, 170);
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
 }
 
 main button:hover {
-    background-color: rgb(0, 128, 113);
-    color: black;
+  background-color: rgb(0, 128, 113);
+  color: black;
 }
 /* ----- MAIN ----- */
 
 /* ----- SIDEBAR ----- */
 #sidebar {
-    grid-area: sidebar;
-    width: 100%;
-    grid-column: 7;
-    grid-row: 2;
-    background: rgb(241, 233, 233);
-    text-align: left;
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
-    padding-top: 2rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  grid-area: sidebar;
+  /* width: 100%; */
+
+  background: rgb(241, 233, 233);
+  text-align: left;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
+  padding-top: var(--space-on-elements);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 #sidebar div {
-    padding-bottom: 2rem;
-    border-bottom: solid 1px rgb(192, 192, 192);
-    padding-top: 2rem;
+  padding-bottom: var(--space-on-elements);
+  border-bottom: solid 1px rgb(192, 192, 192);
+  padding-top: var(--space-on-elements);
 }
 
 #sidebar h3 {
-    padding-bottom: 0.5rem;
-    color: rgb(49, 49, 49);
-    font-size: medium;
+  padding-bottom: 0.5rem;
+  color: rgb(49, 49, 49);
+  font-size: medium;
 }
 
 #sidebar p {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    line-height: 1.2rem;
-    color: rgb(71, 71, 71);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  line-height: 1.2rem;
+  color: rgb(71, 71, 71);
 }
 
 input {
-    margin-top: 1rem;
-    width: 100%;
-    padding-left: 0.5rem;
-    font-size: 0.8rem;
+  margin-top: 1rem;
+  width: 100%;
+  padding-left: 0.5rem;
+  font-size: 0.8rem;
 }
 
 #sidebar button {
-    width: 100%;
-    margin-top: 0.5rem;
-    padding-top: 0.3rem;
-    padding-bottom: 0.3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 0.8rem;
-    background-color: rgb(81, 212, 170);
-    border-color: rgb(81, 212, 170);
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
+  width: 100%;
+  margin-top: 0.5rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-size: 0.8rem;
+  background-color: rgb(81, 212, 170);
+  border-color: rgb(81, 212, 170);
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
 }
 
 #sidebar button:hover {
-    background-color: rgb(0, 128, 113);
-    color: black;
+  background-color: rgb(0, 128, 113);
+  color: black;
 }
 
 #catégories h3 {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 #catégories p {
-    border: solid 1px rgb(71, 71, 71);
-    border-radius: 4px;
-    margin-bottom: 0.19rem;
-    padding-left: 0.5rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-right: 0.5rem;
+  border: solid 1px rgb(71, 71, 71);
+  border-radius: 4px;
+  margin-bottom: 0.19rem;
+  padding-left: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 #catégories a {
-    font-size: 0.8rem;
-    color: rgb(71, 71, 71);
-    background-color: white;
-    text-decoration: none;
-    line-height: 2.5rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    border: 1px solid rgb(71, 71, 71);
-    border-radius: 4px;
+  color: rgb(71, 71, 71);
+  background-color: white;
+  text-decoration: none;
+  line-height: 2.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border: 1px solid rgb(71, 71, 71);
+  border-radius: 4px;
 }
 /* ----- SIDEBAR ----- */
 
 /* ----- FOOTER ----- */
 footer {
-    grid-area: footer;
-    width: 100%;
-    grid-column: 1 / 8;
-    grid-row: 3;
-    background: rgb(58, 77, 111);
+  grid-area: footer;
+  width: 100%;
+
+  background: rgb(58, 77, 111);
 }
 
 footer img {
-    height: 1.8rem;
-    display: inline;
+  height: 1.8rem;
+  display: inline;
 }
 
 footer section {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: left;
-    justify-content: start;
-    gap: 5.5rem;
-    margin-left: 1.5rem;
-}
-
-footer section div {
-    width: 20%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: left;
+  justify-content: start;
+  gap: 5.5rem;
+  margin-left: 1.5rem;
 }
 
 #footer-ecodesign {
-    display: flex;
-    margin-top: 1rem;
-    margin-bottom: 0.6rem;
+  display: flex;
+  margin-top: 1rem;
+  margin-bottom: 0.6rem;
 }
 
 footer h4 {
-    color: white;
-    font-size: 1rem;
-    margin-top: 1rem;
-    margin-bottom: 0.6rem;
+  color: white;
+  font-size: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 0.6rem;
 }
 
-footer p, a {
-    color: grey;
+footer p,
+a {
+  color: grey;
 }
 
 footer a {
-    display: block;
-    text-decoration: none;
-    font-size: 0.8rem;
-    padding-bottom: 0.6rem;
+  display: block;
+  text-decoration: none;
+  padding-bottom: 0.6rem;
 }
 
 #footer-end {
-    margin-left: 2rem;
-    margin-right: 2rem;
-    margin-top: 1.5rem;
-    border-top: 1px solid grey;
-    padding-top: 1rem;
-    text-align: center;
-    color: grey;
+  margin-left: var(--space-on-elements);
+  margin-right: var(--space-on-elements);
+  margin-top: 1.5rem;
+  border-top: 1px solid grey;
+  padding-top: 1rem;
+  text-align: center;
+  color: grey;
 }
 /* ----- FOOTER ----- */
 
-/* ----- MEDIA QUERIES ----- */
-@media screen and (max-width:768px) and (min-width: 600px) {
-    body {
-        max-width: 768px;
-        margin: 0 auto;
-    }
-    
-    header {
-        grid-column: 1 / 5;
-    }
+/* ----- MEDIA QUERIES TABLET ----- */
+@media screen and (max-width: 1200px) and (min-width: 600px) {
+  body {
+    margin: 0 auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      "header header header"
+      "nav nav nav"
+      "main main sidebar"
+      "footer footer footer";
+    grid-template-rows: inherit;
+  }
 
-    nav {
-        grid-column: 1 / 5;
-        grid-row: 2 / 3;
-        flex-direction: row;
-        justify-content: space-around;
-        padding: 0;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    }
+  nav {
+    padding: 0;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  }
+  nav .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1em;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 1em;
+    vertical-align: middle;
+  }
 
-    nav a {
-        font-weight: bold;
-        margin: 0 auto;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-    }
+  main {
+    padding: 0 auto;
+    padding: var(--space-on-elements);
+  }
 
-    nav a:hover {
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
+  #avantages {
+    gap: 2em;
+  }
 
-    main {
-         width: 65vw;
-         padding: 0 auto;
-         grid-column: 1 / 4;
-         grid-row: 3 / 10;
-         padding: 2rem;
-    }
+  .box {
+    width: 100%;
+  }
 
-    #avantages {
-        gap: 0;
-    }
+  main ul {
+    padding-left: 0.7rem;
+  }
 
-    .box {
-        width: 100%;
-    }
+  #sidebar {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  }
 
-    main ul {
-        padding-left: 0.7rem;
-    }
+  footer section {
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 0;
+    justify-content: space-around;
+    gap: 1rem;
+  }
 
-    #sidebar {
-        width: 35vw;
-        grid-column: 4 / 5;
-        grid-row: 3 / 10;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    }
-
-    footer {
-        grid-column: 1 / 5;
-        grid-row: 10 / 13;
-    }
-
-    footer section {
-        margin-left: 0;
-        justify-content: space-around;
-        gap: 1rem;
-    }
-
-    #footer-end {
-        margin-top: 0.6rem;
-        padding-bottom: 0.6rem;
-    }
+  #footer-end {
+    margin-top: 0.6rem;
+    padding-bottom: 0.6rem;
+  }
 }
 /* ----- MEDIA QUERIES ----- */
 
-/* ----- MEDIA QUERIES ----- */
+/* ----- MEDIA QUERIES MOBILE ----- */
 @media screen and (max-width: 600px) and (min-width: 320px) {
-   body {
-        max-width: 600px;
-        margin: 0 auto;
-    }
+  html {
+    font-size: 20px;
+  }
+  body {
+    max-width: 600px;
+    margin: 0 auto;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "nav"
+      "main "
+      "sidebar"
+      "footer ";
+    grid-template-rows: inherit;
+  }
 
-   header {
-        grid-column: 1 / 5;
-    }
+  nav {
+    padding: 0;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  }
 
-    nav {
-        grid-column: 1 / 5;
-        grid-row: 2;
+  nav a {
+    font-size: 1em;
+    font-weight: bold;
+  }
 
-        flex-direction: row;
-        justify-content: space-evenly;
-        padding: 0;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    }
+  nav .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1em;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 1em;
+  }
 
-    nav a {
-        font-size: 1em;
-        font-weight: bold;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-    }
+  main {
+    padding: var(--space-on-elements);
+  }
 
-    nav a:hover {
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
+  #avantages {
+    grid-template-columns: 1fr;
+    gap: var(--space-on-elements);
+  }
 
-    main {
-        width: 100%;
-        padding: 0 auto;
-        grid-column: 1 / 5;
-        grid-row: 3 / 10;
-        padding: 2rem;
-    }
+  .box {
+    width: 100%;
+  }
 
-    #avantages {
-        gap: 0;
-    }
+  #sidebar {
+    width: 100vw;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  }
 
-    .box {
-        width: 100%;
-    }
+  footer {
+    padding: 1rem;
+  }
 
-   #sidebar {
-        width: 100vw;
-        grid-column: 1 / 5;
-        grid-row: 10 / 15;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    }
+  footer section {
+    display: block;
+    grid-template-columns: 1fr;
+  }
 
-    footer {
-        padding: 1rem;
-        grid-column: 1 / 5;
-        grid-row: 15 / 17;
-    }
+  footer section div {
+    width: 100%;
+    padding-bottom: var(--space-on-elements);
+    padding-top: 1rem;
+  }
 
-    footer section {
-        display: block;
-    }
+  .border-bottom-div:not(:last-child) {
+    border-bottom: 1px solid grey;
+    width: 94%;
+  }
 
-    footer section div {
-        width: 100%;
-        padding-bottom: 2rem;
-        padding-top: 1rem;
-    }
-
-    .border-bottom-div {
-        border-bottom: 1px solid grey;
-        width: 94%;
-    }
-
-    #footer-end {
-        padding-bottom: 0.6rem;
-    }
+  #footer-end {
+    margin-top: 0;
+    padding-bottom: 0.6rem;
+  }
 }
 /* ----- MEDIA QUERIES ----- */
