--- a/current-training/programming/css/playground/exercices-background/tp-lamborghini/style.css
+++ b/current-training/programming/css/playground/exercices-background/tp-lamborghini/style.css
@@ -9,14 +9,16 @@ body {
 
 /* ----- HEADER / NAV ----- */
 header {
+    max-width: 100vw;
     background-color: black;
+}
+
+.header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-nav, .logo {
     padding: 1em 1em 1em 1em;
+    flex-wrap: wrap;
 }
 
 header nav .logo {
@@ -30,7 +32,7 @@ ul {
     list-style: none;
 }
 
-a {
+header a {
     font-weight: 300;
     text-transform: uppercase;
     text-decoration: none;
@@ -40,37 +42,53 @@ a {
 /* ----- HEADER / NAV ----- */
 
 /* ----- MAIN ----- */
-
-main div {
-    text-align: center;
-    
-}
-
 .background-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 75vh;
+    min-height: 73vh;
     background-image: url(https://media.discordapp.net/attachments/1359656791461597425/1367616107485069454/background1.jpg?ex=68153b41&is=6813e9c1&hm=8ee2d9fdd1e8ce7bd202d409e13dd69e3ef48d8fff3de595623931cc675d80ee&=&format=webp&width=1536&height=864);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 1em; 
+    color: white;
 }
 
 .background-2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 75vh;
+    min-height: 73vh;
     background-image: url(https://media.discordapp.net/attachments/1359656791461597425/1367616104016515172/background2.jpg?ex=68153b40&is=6813e9c0&hm=b8442f3c17d0eac2f602182f5e898abdf81d557bcd8dc40c8617aba1c7f2a5c2&=&format=webp&width=1536&height=864);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 1em;
+    color: white;
+}
+
+.overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    max-width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);  
+}
+
+main h1 {
+    font-size: 3em;
+}
+
+.top-main-p {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding-bottom: 0.5em;
+}
+
+main section a {
+    color: rgb(77, 97, 185);
+    text-decoration: none;
 }
    
 .gallery {
+    max-width: 100vw;
     min-height: 100vh;
     display: grid;
     gap: 1em;
@@ -84,15 +102,18 @@ main div {
 
 .gallery-item1 {
     grid-area: item1;
+    justify-content: center;
+    align-content: center;
     background-image: url(https://media.discordapp.net/attachments/1359656791461597425/1367616104536477798/image1.jpg?ex=68153b40&is=6813e9c0&hm=f385f3364176cf092f37e4b4fba5d8f9b7f1fd7b89c9067b6a4dc1dcc470a8ed&=&format=webp&width=1536&height=864);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    
 }
 
 .gallery-item2 {
     grid-area: item2;
+    justify-content: center;
+    align-content: center;
     background-image: url(https://media.discordapp.net/attachments/1359656791461597425/1367616105052504085/image2.jpg?ex=68153b40&is=6813e9c0&hm=c10c2669f71b4f2ad9773529d7ff705dc0946968a4cf462a86566f62830c58d3&=&format=webp);
     background-size: cover;
     background-repeat: no-repeat;
@@ -101,6 +122,8 @@ main div {
 
 .gallery-item3 {
     grid-area: item3;
+    justify-content: center;
+    align-content: center;
     background-image: url(https://media.discordapp.net/attachments/1359656791461597425/1367616105404829726/image3.jpg?ex=68153b40&is=6813e9c0&hm=0850255717563f74693016465773605d2cc790afec11f4908c546107acff289b&=&format=webp&width=1785&height=657);
     background-size: cover;
     background-repeat: no-repeat;
@@ -109,6 +132,8 @@ main div {
 
 .gallery-item4 {
     grid-area: item4;
+    justify-content: center;
+    align-content: center;
     background-image: url(https://media.discordapp.net/attachments/1359656791461597425/1367616105815998607/image4.jpg?ex=68153b40&is=6813e9c0&hm=def26c9ce34a4715c0f49bcf017cbfdeb2185ed869f87d74eca0a67ea0f87087&=&format=webp&width=1536&height=864);
     background-size: cover;
     background-repeat: no-repeat;
@@ -117,6 +142,8 @@ main div {
 
 .gallery-item5 {
     grid-area: item5;
+    justify-content: center;
+    align-content: center;
     background-image: url(https://media.discordapp.net/attachments/1359656791461597425/1367616106424176701/image5.jpg?ex=68153b40&is=6813e9c0&hm=93dab7588059569840d4a6954d5b193d6bca477d1fd9889ee66f0541b3a7a657&=&format=webp&width=1536&height=864);
     background-size: cover;
     background-repeat: no-repeat;
@@ -125,48 +152,177 @@ main div {
 
 .gallery-item6 {
     grid-area: item6;
+    justify-content: center;
+    align-content: center;
     background-image: url(https://media.discordapp.net/attachments/1359656791461597425/1367616106801397770/image6.jpg?ex=68153b40&is=6813e9c0&hm=a87068978526485e066cd47c208bc566cb46ff40a581df1ff7b113d0ccd9efa4&=&format=webp&width=1536&height=864);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
+.item-content-white {
+    text-align: center;
+    color: white;
+}
+
+.item-content-black {
+    text-align: center;
+    color: black;
+}
+
+main h3 {
+    font-weight: bold;
+}
+
+main p {
+    font-weight: bold;
+}
 /* ----- MAIN ----- */
 
 /* ----- FOOTER ----- */
-
-footer {
-    display: flex;
-    justify-content: space-evenly;
+.footer-content {
+    max-width: 100vw;
+    max-height: 100vh;
+    display: grid;
+    grid-template-areas: 
+    "item1 item2 item3 item4 item5"
+    "item6 item7";
+    gap: 3em;
     background-color: black;
     color: white;
     font-size: 0.8em;
 }
 
-.footer-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+.footer-item1 {
+    grid-area: item1;
+}
+
+.footer-item2 {
+    grid-area: item2;
+}
+
+.footer-item3 {
+    grid-area: item3;
+}
+
+.footer-item4 {
+    grid-area: item4;
+}
+
+.footer-item5 {
+    grid-area: item5;
+}
+
+.footer-item6 {
+    grid-area: item6;
+}
+
+.footer-item7 {
+    grid-area: item7;
 }
 
 footer p {
-    font-weight: 300;
-}
-
-.bold-title {
     font-weight: bold;
 }
 
-.footer-flex {
-    display: flex;
-    justify-content: space-around;
-    gap: 2em;
+footer ul {
+    list-style: none;
+    padding-left: 0;
+    font-weight: 200;
 }
 
+footer a {
+    color: white;
+    text-decoration: none;
+}
 /* ----- FOOTER ----- */
 
 /* ----- MEDIA QUERIES TABLET ----- */
+@media screen and (max-width: 1280px) and (min-width: 992px) {
+    header {
+        display: flex;
+        justify-content: center;
+    }
+
+    .header-content {
+        justify-content: center;
+        gap: 2em;
+        padding-top: 2em;
+        padding-bottom: 2em;
+    }
+
+    .gallery {
+        max-width: 100vw;
+        display: grid;
+        gap: 1em;
+        margin-left: 1em;
+        margin-right: 1em;
+        margin-bottom: 1em;
+        grid-template-areas: 
+        "item1 item2"
+        "item3 item4" 
+        "item5 item6";
+}
+}
 /* ----- MEDIA QUERIES TABLET ----- */
 
 /* ----- MEDIA QUERIES MOBILE ----- */
+@media screen and (max-width: 992px) {
+    html {
+        font-size: 20px;
+    }
+
+    body {
+        max-width: 992px;
+    }
+
+    header {
+        display: flex;
+        justify-content: center;
+    }
+
+    .header-content {
+        justify-content: center;
+        gap: 2em;
+        padding-top: 2em;
+        padding-bottom: 2em;
+    }
+
+    nav .menu {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 1em;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 1em;
+    }
+
+    .gallery {
+        max-width: 100vw;
+        min-height: 100vh;
+        display: grid;
+        gap: 1em;
+        margin-left: 1em;
+        margin-right: 1em;
+        margin-bottom: 1em;
+        grid-template-areas: 
+        "item1"
+        "item2"
+        "item3"
+        "item4"
+        "item5"
+        "item6";
+    }
+
+    footer section {
+        display: block;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    footer section div {
+        max-width: 100%;
+    }
+}
 /* ----- MEDIA QUERIES MOBILE ----- */
