--- a/current-training/programming/maquette-1/style.css
+++ b/current-training/programming/maquette-1/style.css
@@ -1,7 +1,6 @@
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   max-width: 100vw;
   min-height: 100vh;
   font-size: 16px;
@@ -15,8 +14,9 @@ header {
   height: auto;
   display: flex;
   flex-direction: column;
-  padding-left: 300px;
-  padding-right: 300px;
+  position: relative;
+  align-items: center;
+  align-content: center;
   background-image: url(Images/bg_header.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -27,13 +27,23 @@ header {
 .header-nav {
   height: 70px;
   display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
   justify-content: center;
 }
 
-.nav-content {
+.nav-menu {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  width: 250px;
+}
+
+.nav-left {
+  justify-content: end;
+}
+
+.nav-right {
+  justify-content: flex-start;
 }
 
 ul {
@@ -44,6 +54,12 @@ li {
   list-style: none;
 }
 
+.link {
+  padding: 24px;
+  display: block;
+
+  text-align: center;
+}
 a {
   color: white;
   text-decoration: none;
@@ -51,16 +67,17 @@ a {
 }
 
 .header-content {
-  margin-top: 32px;
-  margin-bottom: 32px;
-  padding-top: 64px;
-  padding-bottom: 64px;
+  width: 1165.5px;
+  padding-top: 128px;
+  padding-bottom: 128px;
 }
 
-.header-section-content {
+.header-right-content {
   display: flex;
   flex-direction: column;
-  justify-content: right;
+  align-items: flex-end;
+
+  padding-right: 64px;
 }
 
 .text-content {
@@ -83,11 +100,10 @@ header p {
 .header-btn {
   width: fit-content;
   display: flex;
-  justify-content: right;
-  gap: 5px;
   background-color: #c9a47e;
   border-radius: 50px;
   padding: 5px 10px;
+  gap: 5px;
 }
 
 .btn-text {
@@ -99,21 +115,28 @@ header p {
 .header-btn img {
   height: 20px;
 }
+
+.social-media {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
 /* ----- HEADER ----- */
 
 /* ----- MAIN ----- */
 main {
-  max-width: 100%;
+  /* max-width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   background-color: #606060;
 }
 
 .section-content {
-  width: 75%;
+  width: 100%;
   display: flex;
-  gap: 30px;
+  justify-content: center;
+  gap: 150px;
 }
 
 h4 {
@@ -132,7 +155,6 @@ h4 {
 .text-style-gold {
   color: #c9a47e;
   font-size: 14px;
-  padding-bottom: 20px;
 }
 
 .mid-text-content {
@@ -163,7 +185,8 @@ h4 {
 .about-hall,
 .about-projects,
 .about-services {
-  width: 70%;
+  max-width: 1200px;
+  margin: 0 auto;
   justify-content: center;
   padding: 30px 100px;
 }
@@ -184,6 +207,18 @@ h4 {
   width: 220px;
   height: 295px;
 }
+.image-relative {
+  position: relative;
+}
+
+.london {
+  position: absolute;
+  background-color: #c9a47e;
+  padding: 5px 10px;
+  text-transform: uppercase;
+  left: 20px;
+  bottom: -16px;
+}
 
 .projects-section-content,
 .services-section-content {
@@ -196,16 +231,22 @@ h4 {
 }
 
 .first-flyer {
-  width: 290px;
+  max-width: 290px;
   height: 434px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-image: url(Images/paris.jpg);
   background-size: cover;
   padding: 32px;
 }
 
 .second-flyer {
-  width: 290px;
+  max-width: 290px;
   height: 434px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-image: url(Images/london.jpg);
   background-size: cover;
   padding: 32px;
@@ -250,10 +291,61 @@ h4 {
 
 .services-left-content,
 .services-middle-content {
-  width: 290px;
+  max-width: 290px;
   height: 434px;
 }
 
+.services-left-content img,
+.services-middle-content img {
+  margin-bottom: 30px;
+}
+
+.services-left-content p,
+.services-middle-content p {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: #606060;
+  font-weight: 600;
+}
+
+.services-left-content button {
+  background-color: #606060;
+  color: #c9a47e;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-left: 60px;
+  padding-right: 10px;
+}
+
+.services-middle-content button {
+  background-color: #c9a47e;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 40px;
+  padding-left: 60px;
+  padding-right: 10px;
+}
+
+.about-services span {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.services-img img {
+  border-top: 2px solid #c9a47e;
+  border-bottom: 2px solid #c9a47e;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  margin-bottom: 20px;
+}
+
+.right-content-text {
+  text-align: right;
+  line-height: 17px;
+  color: white;
+  font-weight: 500;
+}
 
 /* ----- MAIN ----- */
 
