--- a/current-training/programming/maquette-1/style.css
+++ b/current-training/programming/maquette-1/style.css
@@ -1,10 +1,8 @@
 :root {
-  --container-width: 1200px;
+  --container-width: 1100px;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   max-width: 100vw;
   min-height: 100vh;
   font-size: 16px;
@@ -13,6 +11,7 @@ body {
 }
 
 /* ----- HEADER ----- */
+
 header {
   max-width: 100%;
   height: auto;
@@ -30,7 +29,6 @@ header {
 
 .header-nav {
   max-width: var(--container-width);
-  height: 70px;
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
@@ -112,7 +110,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding-right: 32px;
+  padding-right: 64px;
 }
 
 .text-content {
@@ -124,12 +122,12 @@ header h1 {
   font-weight: 100;
   line-height: 60px;
   text-transform: uppercase;
-  margin-bottom: 20px;
+  margin-bottom: 32px;
 }
 
 header p {
   line-height: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 32px;
 }
 
 .header-btn {
@@ -137,11 +135,12 @@ header p {
   display: flex;
   background-color: #c9a47e;
   border-radius: 50px;
-  padding: 5px 10px;
+  padding: 10px 20px;
   gap: 5px;
   text-transform: uppercase;
   font-weight: bold;
   color: white;
+  letter-spacing: 2px;
 }
 
 .header-btn:hover {
@@ -163,14 +162,11 @@ header p {
   left: 0;
   bottom: 0;
 }
+
 /* ----- HEADER ----- */
 
 /* ----- MAIN ----- */
 main {
-  /* max-width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center; */
   background-color: #606060;
 }
 
@@ -178,7 +174,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
-  gap: 150px;
+  gap: 100px;
 }
 
 h4 {
@@ -204,18 +200,15 @@ h4 {
   padding-left: 60px;
 }
 
-.about-hall span,
-.about-projects span,
-.about-services span {
+span {
   color: white;
 }
 
-.about-hall h1,
-.about-projects h1,
-.about-services h1 {
+main h1 {
   text-transform: uppercase;
   font-size: 36px;
   text-align: center;
+  margin-bottom: 64px;
 }
 
 .about-hall,
@@ -230,7 +223,7 @@ h4 {
   max-width: var(--container-width);
   margin: 0 auto;
   justify-content: center;
-  padding: 30px 100px;
+  padding: 64px;
 }
 
 .about-projects {
@@ -249,6 +242,7 @@ h4 {
   width: 220px;
   height: 295px;
 }
+
 .image-relative {
   position: relative;
 }
@@ -265,15 +259,11 @@ h4 {
 .projects-section-content,
 .services-section-content {
   display: flex;
-  align-items: center;
   justify-content: center;
-  gap: 30px;
-  margin-top: 32px;
-  margin-bottom: 32px;
+  gap: 50px;
 }
 
 .first-flyer {
-  max-width: 290px;
   height: 434px;
   display: flex;
   flex-direction: column;
@@ -284,7 +274,6 @@ h4 {
 }
 
 .second-flyer {
-  max-width: 290px;
   height: 434px;
   display: flex;
   flex-direction: column;
@@ -316,7 +305,7 @@ h4 {
 
 .date {
   width: fit-content;
-  padding: 5px;
+  padding: 5px 10px;
   background-color: #272727;
   border-radius: 2px;
 }
@@ -324,22 +313,26 @@ h4 {
 .about-projects h3 {
   color: white;
   font-weight: 300;
+  text-transform: uppercase;
 }
 
 .about-projects p {
   font-weight: bold;
-  line-height: 17px;
 }
 
-.services-left-content,
 .services-middle-content {
-  max-width: 290px;
-  height: 434px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .services-left-content img,
 .services-middle-content img {
   margin-bottom: 30px;
+}
+
+.services-middle-content img {
+  max-height: 95px;
 }
 
 .services-left-content p,
@@ -350,35 +343,23 @@ h4 {
   font-weight: 600;
 }
 
-.services-left-content button {
+.services-left-content button,
+.services-middle-content button {
   background-color: #606060;
   color: #c9a47e;
   font-weight: bold;
   text-transform: uppercase;
   padding-left: 60px;
   padding-right: 10px;
+  letter-spacing: 2px;
+  border-left: 3px solid #c9a47e;
 }
 
-.services-left-content button:hover {
+.services-left-content button:hover,
+.services-middle-content button:hover {
   background-color: #c9a47e;
   color: #c7c7c7;
   font-style: italic;
-}
-
-.services-middle-content button:hover {
-  background-color: #606060;
-  color: #c9a47e;
-  font-style: italic;
-}
-
-.services-middle-content button {
-  background-color: #c9a47e;
-  color: white;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-top: 40px;
-  padding-left: 60px;
-  padding-right: 10px;
 }
 
 .about-services span {
@@ -391,19 +372,19 @@ h4 {
   border-bottom: 2px solid #c9a47e;
   padding-top: 40px;
   padding-bottom: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .right-content-text {
   text-align: right;
-  line-height: 17px;
+  line-height: 20px;
   color: white;
-  font-weight: 500;
 }
 
 /* ----- MAIN ----- */
 
 /* ----- FOOTER ----- */
+
 footer {
   width: 100%;
   height: auto;
@@ -438,6 +419,11 @@ footer {
   padding: 32px;
 }
 
+.left-content h1 {
+  font-size: 32px;
+  line-height: 32px;
+}
+
 .right-content {
   width: 350px;
   height: 313px;
@@ -445,11 +431,11 @@ footer {
   flex-direction: column;
   justify-content: space-around;
   background-color: rgba(0, 0, 0, 0.9);
-  padding: 32px;
+  padding: 16px;
 }
 
-footer input,
-footer textarea {
+input,
+textarea {
   min-width: 100%;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -471,8 +457,8 @@ footer button {
   color: white;
   text-transform: uppercase;
   font-weight: bold;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 5px 20px;
+  letter-spacing: 2px;
 }
 
 footer button:hover {
